# JsonStudio

./: .cursorignore  .gitignore  CHANGELOG.md  CHANGELOG_ZH.md  Makefile  README.md  README_ZH.md  components.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  replace_styles.py  tsconfig.json  vite.config.js
.cargo/: config.toml
.cursor/rules/: git-commit.mdc
.github/workflows/: build-release.yml  build-test.yml  deploy-pages.yml
benchmarks/: README.md  sourceModelBenchmark.js
docs/: CNAME  changelog.html  code-generator.html  global.css  index.html  json-converter.html  json-diff.html  json-formatter.html  json-schema.html  json-tree-grid-view.html  robots.txt  site.webmanifest  sitemap.xml
docs/superpowers/specs/: 2026-05-22-tree-view-key-value-editing-design.md
docs/zh/: changelog.html  code-generator.html  index.html  json-converter.html  json-diff.html  json-formatter.html  json-schema.html  json-tree-grid-view.html
e2e/: editor-link-click.spec.js  format-clipboard-shortcut.spec.js  grid-view-interactions.spec.js  large-json-performance.spec.js  log-json-fragments.spec.js  standard-json.spec.js  tab-navigation.spec.js  tree-view-interactions.spec.js
e2e/helpers/: editorHarness.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/dmg/: README_EN.txt  README_ZH.txt
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  macos_menu_view.rs  macos_window.rs  main.rs  window_bounds.rs
src-tauri/src/commands/: clipboard.rs  codegen.rs  convert.rs  export_image.rs  file.rs  file_watcher.rs  json.rs  mod.rs  shortcuts.rs  window.rs
src-tauri/src/commands/codegen/: mod.rs  parser.rs  parser_tests.rs  schema.rs  type_shape.rs
src/lib/: utils.ts
src/lib/components/: AboutDialog.svelte  AppResourceLinks.svelte  AppUpdateNotification.svelte  SettingsPanel.svelte  ShortcutRecorder.svelte  TitleBar.svelte
src/lib/components/dialogs/: ConfirmDialog.svelte
src/lib/components/editor/: CodeGenView.svelte  ConvertView.svelte  DiffTabBar.svelte  FolderSidebar.svelte  (+13 more)
src/lib/config/: monacoThemes.ts
src/lib/i18n/: index.ts
src/lib/services/: appMetadata.js  appUpdater.js  clipboardTabs.js  codegen.ts  convert.ts  convertExtraFormats.js  convertStructuredFormats.js  diffPasteNormalize.js  editorLinks.js  exportImage.ts  externalLinks.js  file.ts  fileWatcher.ts  gridEdit.js  gridExportFiles.js  gridExportMenu.js  gridExportModel.js  gridSelection.js  gridViewModel.js  json.ts  json5Format.js  jsonDocumentModel.js  jsonDocumentParse.js  jsonKeyNaming.ts  jsonKeySort.js  jsonSourceModel.js  jsonToStandard.js  jsonTreeModel.js  jsonTreeModelCache.js  jsonTreeWorker.js  logJsonFragments.js  logJsonWorker.js  logPrintedStructures.js  monaco.ts  openJsonNormalize.js  panelResize.js  pasteFormatWorker.js  persistentWorker.js  schema.ts  smartCodeDefinition.js  (+3 more)
src/lib/stores/: appUpdateStore.ts  documentStore.ts  editor.ts  file.ts  folder.ts  settings.ts  shortcuts.ts  tabClose.js  tabOpen.js  tabOrder.js  tabs.ts  untitledTabs.js
src/lib/workers/: jsonTree.worker.js  logJson.worker.js  pasteFormat.worker.js
src/routes/: +layout.svelte  +page.svelte
src/types/: globals.d.ts
tests/: appMetadata.test.js  appShell.test.js  appUpdateNotification.test.js  appUpdater.test.js  clipboardTabs.test.js  codegen.test.js  convertExtraFormats.test.js  devConfig.test.js  diffPasteNormalize.test.js  diffToolbar.test.js  editorAutoRepairRemoved.test.js  editorLinks.test.js  exportImage.test.js  fileAssociations.test.js  fileTabs.test.js  githubReleaseUpdater.test.js  globalShortcuts.test.js  gridEdit.test.js  gridExport.test.js  gridExportMenu.test.js  gridSelection.test.js  gridViewModel.test.js  json5Format.test.js  jsonDocumentModel.test.js  jsonDocumentParse.test.js  jsonKeyNaming.test.js  jsonKeySort.test.js  jsonSourceModel.test.js  jsonToStandard.test.js  jsonTreeModelCache.test.js  logJsonFragments.test.js  macosUpdateMenu.test.js  openJsonNormalize.test.js  panelResize.test.js  persistentWorker.test.js  smartCodeDefinition.test.js  standaloneJsonPasteNormalize.test.js  tabOrder.test.js  tabsPersistence.test.js  toolbarFileActions.test.js  (+5 more)
(+2 files in other folders)
