[package]
name = "jsonstudio"
version = "1.3.0"
description = "Fast, modern, and efficient JSON desktop tool"
authors = ["sundegan"]
license = "Apache-2.0"
repository = "https://github.com/sundegan/JsonStudio"
edition = "2021"

[lib]
name = "jsonstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
json5 = "0.4"
tokio = { version = "1", features = ["time", "sync"] }
serde_yaml = "0.9.34"
quick-xml = { version = "0.39.2", features = ["serialize"] }
toml = "1.0.3"
csv = "1.4.0"
heck = "0.5.0"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
png = "0.18"
ab_glyph = "0.2"
base64 = "0.22.1"
notify = "6.1"
notify-debouncer-mini = "0.4"
walkdir = "2.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.flate2]
opt-level = 3

[profile.dev.package.fdeflate]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.simd-adler32]
opt-level = 3

[profile.dev.package.crc32fast]
opt-level = 3

[profile.dev.package.adler2]
opt-level = 3
